--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
         <title>BIBLIOTECA</title>
     </head>
     <body>
-        <button type="button" id="ad" onclick="abriradicionar()">Adicionar</button>
+        <div class="fundo" id="fu"></div>
+        <button type="button" id="ad">Adicionar</button>
         <button type="button" id="li">Listar</button>
         <button type="button" id="ex">Excluir</button>
         <h1>BIBLIOTECA</h1>
         <div class="vl1"></div>
-        
-        </div>
     </body>
 <script src="codigo.js"></script>
 </html>
