--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button type="button" id="ex">Excluir</button>
         <h1>BIBLIOTECA</h1>
         <div class="vl1"></div>
+        </div>
     </body>
 <script src="codigo.js"></script>
 </html>
